Fix horizontal overflow

--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,4 +1,3 @@
 .block {
   background: #FFFFFF;
-  width: 100vw;
 }
